--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,29 +22,28 @@
 	<link href="https://fonts.googleapis.com/css2?family=Coming+Soon&display=swap" rel="stylesheet">
 </head>
 <body>
-	<%- include('header.ejs') %>
 	<%- include('navigation.ejs') %>
 
 
 	<section>
 		<div id="main-section">
-			<p>Hello and welcome to my website. My name is Will Kung and I am a human being currently residing in Denver, Colorado. I am a professional software engineer and an amateur musician. <span id="about-me" class="more-button"><b>More About Me</b></span></p>
+			<p>Hello, and welcome. My name is Will Kung and I am a software engineer and musician. I currently reside in Denver, Colorado with my girlfriend Rene and pitbull Millie, who are my best friends in the whole world.
 
-			<p class="center-quote"><i>"Write this down, Take a little note to remind you in case you didn't know"</i> - <b>George Strait</b></p>
+			<p class="center-quote"><i>"Write this down, Take a little note" </i><br>- <b>George Strait</b></p>
 
-			<p>I created lonesomefiddles in an effort to document the thoughts, ideas, and epihanies that come to me during my brief, random bursts of clarity and creativity. In addition to chronicling my String Cheese Incident adventures, . </p>
+			<p>I started lonesomefiddles in an effort to document the random thoughts, ideas, and epihanies that come to me during my brief moments of clarity and creativity. In addition to chronicling my adventures seeing my favorite band The String Cheese Incident, this website also serves as a sandbox environment for my various projects, most of which I start but never finish.</p>
+
+			<p class="center-quote"><i>One Nation, Under a Groove? </i></p>
+
+			<p id="p-bottom">This begins as a personal project, but I'm buildling in opportunities for collaboration right from the start - My ultimate goal is to develop a network of like-minded individuals - i.e. SCI fanatics, jam band enthusiasts and festival goers with projects such as the <span class="project-title">Stats Tracker</span> or <span class="project-title">Show Reviews</span>, as well as a local community of Denver music lovers. Please reach out with any interest or ideas for potential collaboration and, as always, <span id="keep-the-dream"><i>Keep The Dream Alive!</i></span> - Will</p>
 
 
-
-
-
-
-			<div id="keep-the-dream">Keep The Dream Alive!</div>
-			<b>Hot Takes</b>
+			<!-- <b>Hot Takes</b>
 			Getting married at a music festival is cringe level midnight
+ -->
+		<!-- 	Take Time to Give Thanks, Make Time to be Givin'
 
-			Take Time to Give Thanks, Make Time to be Givin'
-
+have a positive impact on the world  -->
 
 			<!-- Today I am 
 				<span id="age" class="code-example"></span> 
