--- a/public/css/index.css
+++ b/public/css/index.css
@@ -21,12 +21,14 @@ html, body{
 	background:white;
 }
 
+#p-bottom{margin-bottom:100px;}
+
 #main-section{
 	max-width: 960px;
-	font-size: 16px;
+	font-size: 14px;
 	margin-top:20px;
 	margin-bottom:50px;
-	width:50%;
+	width:60%;
 	margin-left:auto;
 	margin-right:auto;
 }
