--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
 
 	<section>
 		<div id="main-section">
-			<p>Hello, and welcome. My name is Will Kung and I am a software engineer and musician. I currently reside in Denver, Colorado with my girlfriend Rene and pitbull Millie, who are my best friends in the whole world.
+			<p>Hello, and welcome. My name is Will Kung and I am a software engineer and a musician. I currently reside in Denver, Colorado with my girlfriend Rene and pitbull Millie, who are my best friends in the whole world.
 
 			<p class="center-quote"><i>"Write this down, Take a little note" </i><br>- <b>George Strait</b></p>
 
@@ -35,8 +35,9 @@
 
 			<p class="center-quote"><i>One Nation, Under a Groove? </i></p>
 
-			<p id="p-bottom">This begins as a personal project, but I'm buildling in opportunities for collaboration right from the start - My ultimate goal is to develop a network of like-minded individuals - i.e. SCI fanatics, jam band enthusiasts and festival goers with projects such as the <span class="project-title">Stats Tracker</span> or <span class="project-title">Show Reviews</span>, as well as a local community of Denver music lovers. Please reach out with any interest or ideas for potential collaboration and, as always, <span id="keep-the-dream"><i>Keep The Dream Alive!</i></span> - Will</p>
+			<p>While this begins as a personal project, I'm buildling in opportunities for collaboration right from the start - My ultimate goal is to develop a network of like-minded individuals - i.e. SCI fanatics, jam band enthusiasts and festival goers with projects such as the <span class="project-title">Stats Tracker</span> or <span class="project-title">Show Reviews</span>, as well as a local community of Denver music lovers. Please reach out with any interest or ideas for potential collaboration and, as always, stay cheesey! - Will</p>
 
+			<p id="p-bottom" class="center-quote"><span id="keep-the-dream"><i>Keep The Dream Alive!</i></span></p>
 
 			<!-- <b>Hot Takes</b>
 			Getting married at a music festival is cringe level midnight
