--- a/views/navigation.ejs
+++ b/views/navigation.ejs
@@ -2,6 +2,6 @@
 <div id="menu">
 	<div id="home" class="menu-item"><a class="link_no_underline link-text" href="/">HOME</a></div>
 	<div id="about" class="menu-item"><a class="link_no_underline link-text" href="/about">ABOUT ME</a></div>
-	<div id="hot-takes" class="menu-item" ><a class="link_no_underline link-text" href="/hottakes">HOT TAKES</a></div>
+	<div id="hot-takes" class="menu-item" ><a class="link_no_underline link-text" href="/projects">PROJECTS</a></div>
 	<div id="music" class="menu-item"><a class="link_no_underline link-text" href="/music">MUSIC</a></div>
 </div>
