--- a/public/css/index.css
+++ b/public/css/index.css
@@ -21,16 +21,8 @@ html, body{
 	background:white;
 }
 
-#p-bottom{margin-bottom:100px;}
-
-#main-section{
-	max-width: 960px;
-	font-size: 14px;
-	margin-top:20px;
-	margin-bottom:50px;
-	width:60%;
-	margin-left:auto;
-	margin-right:auto;
+#p-bottom{
+	margin-bottom:100px;
 }
 
 #age{
@@ -40,8 +32,10 @@ html, body{
 
 
 
-@media (max-width: 650px) {
-	#main-section{width:90%;}
+@media (max-width: 750px) {
+	#main-section{
+		width:90%;
+	}
 	
 }
 
