--- a/public/css/projects.css
+++ b/public/css/projects.css
@@ -39,10 +39,22 @@ br {
     margin-top: 0px; 
 }
 
+.setlist-link br{
+	display: block; 
+    content: "";
+    margin-top: 0px; 
+}
+
+.setlist-link:hover{
+	text-decoration: underline;
+	cursor: default;
+}
+
 .title{
 	color:#3c2415;
 	font-size: 11px;
 	font-weight: bold;
+	margin-top:25px;
 }
 
 .k{
@@ -110,9 +122,10 @@ br {
 		background: rgba(0,0,0,0.04);
 	max-width: 420px;
 	display:inline-block;
-	padding:5px;
+	padding:10px 15px;
 	margin-bottom: 15px;
 	margin-top:15px;
+	border-radius: 3px;
 }
 
 .song-separator{
@@ -122,6 +135,7 @@ br {
 
 #song-info-table{
 	padding:0;
+	margin-bottom: 10px;
 }
 
 .song-link:hover{
