--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -24,7 +24,7 @@ html,body{
 }
 
 h3{
-	font-size:	16px;
+	font-size:20px !important;
 }
 
 h4{
@@ -37,6 +37,10 @@ h5{
 
 h6{
 	font-size:8px;
+}
+
+.centered{
+	text-align: center;
 }
 
 .code *{
@@ -80,7 +84,7 @@ h6{
 
 #logo{
 	margin-top:10px;
-	width:320px;
+	width:250px;
 	margin-left:auto;
 	margin-right:auto;
 	text-align:center;
@@ -89,22 +93,25 @@ h6{
 .link-text{
 	font-family: 'Coming Soon', cursive !important;
 	font-weight:900;
-	font-size:16px;
-	color:	#3c2415 !important;
+	font-size:14px;
+	color:	#3C3237 !important;
 }
 
 #menu{
-	margin-top:10px;
+	margin-top:0px;
 	margin-left:auto;
 	margin-right:auto;
 	text-align:center;
+	-webkit-box-shadow: 0 4px 6px -6px #222;
+  -moz-box-shadow: 0 4px 6px -6px #222;
+  box-shadow: 0 4px 6px -6px #222;
 }
 
 .menu-item{
 	cursor:pointer;
 	margin-left:auto;
 	margin-right:auto;
-	margin:10px 25px;
+	margin:8px 20px;
 	display:inline-block;
 	text-align:center;
 }
@@ -114,13 +121,26 @@ h6{
 	transition:0.3s;
 }
 
-.link_no_underline:hover{
-	color:#444;
+.link-no-underline:hover{
+	color:#3C3237;
+	text-decoration: underline;
 }
 
-.link_no_underline{
+.link-no-underline{
+	font-weight: bold;
 	text-decoration: none;
-	color:#444;
+	color:#3C3237;
+}
+
+.tickets-link{
+	color: #3D6F89;
+	text-decoration: none;
+}
+
+.tickets-link:hover{
+		color: #3D6F89;
+		text-decoration: underline;
+		cursor: pointer;
 }
 
 #footer-img-container{
@@ -137,8 +157,6 @@ h6{
 
 #header{
 	width:100%;
-	padding-top:5px;
-	padding-bottom:5px;
 	background:#ffde17;
 }
 
@@ -156,7 +174,7 @@ h6{
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: #ffde17;
+  background-color: #FEC216;
   color: white;
   height:50px;
   text-align: center;
