--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,14 @@
 </head>
 <body>
 	<%- include('navigation.ejs') %>
+
+	<!-- <div id="spotify-container">
+		<iframe style="border-radius:2px" src="https://open.spotify.com/embed/track/7yKGc4mQorPDl6lYG1XQPU?utm_source=generator" width="100%" height="80" frameBorder="0" allowfullscreen="false" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+	</div> -->
+
 	<section id="main">
+
+
 
 		<div class="parallax">
 			
@@ -76,6 +83,7 @@
 
 			<div id="booking-anchor">
 				<h3 class="centered">BOOKING</h3>
+				<div id="email">slidewok@gmail.com</div>
 				<div><img id="booking-img" src="img/cervs_1.jpg"></div>
 			</div>
 		</div>
