--- a/public/css/index.css
+++ b/public/css/index.css
@@ -75,7 +75,7 @@ html, body{
 }
 .parallax {
   /* The image used */
-  background-image: url("../img/band_1.jpg");
+  background-image: url("https://drive.google.com/file/d/1pF929cPI-wZUmxqeAIhuUpgB983MLXnD");
   opacity: 0.55;
   margin-top:-150px;
 
