--- a/views/index.ejs
+++ b/views/index.ejs
@@ -84,7 +84,7 @@
 			<div id="booking-anchor">
 				<h3 class="centered">BOOKING</h3>
 				<div id="email">slidewok@gmail.com</div>
-				<div><img id="booking-img" src="img/smoll.png"></div>
+				<div><img id="booking-img" src="img/cervs_1_compress.jpg"></div>
 			</div>
 		</div>
 
