updating img compress

--- a/views/music.ejs
+++ b/views/music.ejs
@@ -28,6 +28,8 @@
 	<section id="main">
 		DEMOS
 
+		<audio controls><source src="https://drive.google.com/uc?id=1lPeNkQlkn3jKH7WsmT4c-oM4zHCQIEpr" type="audio/mpeg"> </audio>
+
 	</section>
 
 
