--- a/views/music.ejs
+++ b/views/music.ejs
@@ -26,9 +26,78 @@
 
 
 	<section id="main">
-		DEMOS
+		<h3>DEMOS</h3>
 
-		<audio controls><source src="https://drive.google.com/uc?id=1lPeNkQlkn3jKH7WsmT4c-oM4zHCQIEpr" type="audio/mpeg"> </audio>
+
+
+
+		<table>
+			<tr>
+				<th>
+					<div class="demo-title">Denver Practice Session - 3/24/2023</div>
+					<div class="demo-notes">Recorded with 2 overhead condensor mics. Hush FTP with correct chords. Higher State of Mind with Will trying out vocals. Ricky teased Mary had a little lamb during Fight the Power.</div>
+
+				</th>
+				<th></th>
+			</tr>
+
+			<tr>
+				<td>
+					<div class="song-title">Hush</div>
+					<div class="song-notes">Take 3</div>
+				</td>
+				<td>
+				<div class="audio-container"><audio controls><source src="https://drive.google.com/uc?id=1lPeNkQlkn3jKH7WsmT4c-oM4zHCQIEpr" type="audio/mpeg"> </audio>
+				</div>
+				</td>
+			</tr>
+
+			<tr>
+				<td>
+					<div class="song-title">Millie's Song</div>
+					<div class="song-notes">Bad version in D (slow and sloppy)</div>
+				</td>
+				<td>
+				<div class="audio-container"><audio controls><source src="https://drive.google.com/uc?id=11ywahizhk9kt_YV2-EnhSmdZ7DdtZTRY" type="audio/mpeg"> </audio>
+				</div>
+				</td>
+			</tr>
+
+			<tr>
+				<td>
+					<div class="song-title">Higher State of Mind</div>
+					<div class="song-notes">Will on Vocals</div>
+				</td>
+				<td>
+				<div class="audio-container"><audio controls><source src="https://drive.google.com/uc?id=1v0D1D8mYl5U8VJocqx41-w2jQWiubsou" type="audio/mpeg"> </audio>
+				</div>
+				</td>
+			</tr>
+
+			<tr>
+				<td>
+					<div class="song-title">Back in Love</div>
+					<div class="song-notes"></div>
+				</td>
+				<td>
+				<div class="audio-container"><audio controls><source src="https://drive.google.com/uc?id=1mN8atjVcFr1KEuRSn6d2frRxWnwya082" type="audio/mpeg"> </audio>
+				</div>
+				</td>
+			</tr>
+
+			<tr>
+				<td>
+					<div class="song-title">Fight the Power</div>
+					<div class="song-notes">Mary had a tiny fuckin lamb</div>
+				</td>
+				<td>
+				<div class="audio-container"><audio controls><source src="https://drive.google.com/uc?id=1b0lfipG5wD42MhCClfkAhivCEMqbkSVw" type="audio/mpeg"> </audio>
+				</div>
+				</td>
+			</tr>
+		
+
+		</table>
 
 	</section>
 
