--- a/public/css/music.css
+++ b/public/css/music.css
@@ -17,7 +17,8 @@
 .demo-notes{
 	font-weight: normal;
 	font-size: 10px;
-	max-width: 250px;
+	max-width: 420px;
+	margin-bottom:20px;
 }
 
 .demo-title{
