more css update

--- a/views/music.ejs
+++ b/views/music.ejs
@@ -48,7 +48,7 @@
 			<tr>
 				<td>
 					<div class="song-title">Millie's Song</div>
-					<div class="song-notes">Bad version in D (slow and sloppy)</div>
+					<div class="song-notes">Bad version in D</div>
 				</td>
 				<td>
 				<div class="audio-container"><audio controls><source src="https://drive.google.com/uc?id=11ywahizhk9kt_YV2-EnhSmdZ7DdtZTRY" type="audio/mpeg"> </audio>
