--- a/views/navigation.ejs
+++ b/views/navigation.ejs
@@ -1,6 +1,6 @@
 <div id="logo"><img id="logo" src="img/logo.png"></div>
 <div id="menu">
-	<div id="shows" class="menu-item"><a class="link-no-underline link-text" href="#shows-anchor">SHOWS</a></div>
+	<div id="shows" class="menu-item"><a class="link-no-underline link-text" href="/#shows-anchor">SHOWS</a></div>
 	<div id="about" class="menu-item"><a class="link-no-underline link-text" href="/about">ABOUT</a></div>
 	<div id="booking" class="menu-item" ><a class="link-no-underline link-text" href="/projects">BOOKING</a></div>
 	<div id="music" class="menu-item"><a class="link-no-underline link-text" href="/music">MUSIC</a></div>
