--- a/public/css/music.css
+++ b/public/css/music.css
@@ -1,5 +1,7 @@
 #main{
 	padding:25px;
+	margin-top:25px;
+	margin-bottom:50px;
 	max-width: 960px;
 	margin-left: auto;
 	margin-right:auto;
@@ -23,4 +25,13 @@
 
 .demo-title{
 
+}
+
+th,td{
+	padding:10px 5px !important;
+}
+audio{
+	width:250px;
+	padding:0;
+	border-radius:5px;
 }
