--- a/views/navigation.ejs
+++ b/views/navigation.ejs
@@ -1,4 +1,4 @@
-<div id="logo"><img id="logo" src="img/logo.png"></div>
+<a class="link-no-underline" href="/"><div id="logo"><img id="logo" src="img/logo.png"></div></a>
 <div id="menu">
 	<div id="shows" class="menu-item"><a class="link-no-underline link-text" href="/#shows-anchor">SHOWS</a></div>
 	<div id="about" class="menu-item"><a class="link-no-underline link-text" href="/about">ABOUT</a></div>
